--- a/package.json
+++ b/package.json
@@ -1,14 +1,23 @@
 {
-  "name": "app",
+  "name": "friendFinder",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/mike881205/friendFinder.git"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/mike881205/friendFinder/issues"
+  },
+  "homepage": "https://github.com/mike881205/friendFinder#readme",
   "dependencies": {
     "express": "^4.17.1",
     "path": "^0.12.7"
